--- a/public/stylesheets/_layouts/dashboard.css
+++ b/public/stylesheets/_layouts/dashboard.css
@@ -3,18 +3,20 @@ body {
     font-family:Arial;
     margin:0;
     padding:0px;
+	background:rgb(239, 239, 239);
+	
 }
 .extender {
     height:1px;
     clear:both;
 }
 #header_bg {
-    height : 80px;
-    background : #b00 url(../../images/application/bg_pattern.png) repeat;
+    height : 94px;
+    background : rgb(42, 85, 113) ;
 }
 #header {
     width : 980px; 
-    height : 80px;
+    height : 90px;
     margin:0 auto;
 }
 #header_link {
@@ -52,16 +54,20 @@ body {
     float: left;
 }
 #main-menu li a {
-    background : #fff;
+    background : #333;
     color : #b00;
     display : block;
     font-size : 0.8em;
     float : left;
-    height : 17px; width : auto;
+     
+
+	width : auto;
     margin : 6px 5px 0 0;
-    padding : 5px 10px 0 10px;
+    padding : 10px 15px;
+	
     text-align : center;
     text-decoration : none;
+	border-radius:7px 7px 0 0;
 }
 #main-menu li a:hover {
     text-decoration : underline;
@@ -72,7 +78,7 @@ body {
     width : 160px;
     list-style-type: none;
     position: absolute;
-    top: 80px;
+    top: 93px;
     z-index: 999;
     visibility : hidden;
     border : 1px solid black;
@@ -168,8 +174,14 @@ p.flash-msg {
 }
 #content_wrapper {
     width:980px;
-    margin:0 auto;
+    margin:20px auto 0 auto;
+	border-radius:10px;
+	-moz-border-radius:10px;
+	-webkit-border-radius:10px;
     background-color:#fff;
+	-webkit-box-shadow: 0px 0px 7px rgba(50, 50, 50, 0.29);
+	-moz-box-shadow:    0px 0px 7px rgba(50, 50, 50, 0.29);
+	box-shadow:         0px 0px 7px rgba(50, 50, 50, 0.29);
 }
 #side_bar {
     width:200px;
@@ -184,11 +196,11 @@ p.flash-msg {
 #content {
     width: 100%;
     float:left;
+	margin:20px 0 0 0;
 }
 
 #footer {
     height:33px;
-    background:#b00 url(../../images/application/app_layout_footer_bg.jpg) repeat;
 }
 #footer #footer_links {
     height:33px;width:614px;
@@ -360,6 +372,7 @@ body > #content_wrapper {
     margin-top : -33px;
     height : 33px;
     clear : both;
+	
 }
 
 /* Default class for drop down menus */
@@ -535,7 +548,6 @@ body > #content_wrapper {
     margin-top :15px;
     height : 66px;
     clear : both;
-    background: url(/images/foot.png) repeat-x;
     width:100%;
 }
 #footer_logo {
