--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,401 @@
-Home Index Page
+<!Doctype HTML>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="" content="" >
+
+  <link rel="stylesheet" href="/stylesheets/home/bpc_v1.css">
+  <link href="/stylesheets/jquery.onebyone.css" rel="stylesheet" type="text/css">
+  <link href="/stylesheets/home/animcore.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/home/animate.css">
+  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Raleway:400,900' rel='stylesheet' type='text/css'>
+
+  <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+
+</head>
+
+<body>
+
+  <!--top nav -->
+  <nav id="" class="top-bar">
+    <ul class="top-menu">
+      <li><a href="#">Faculty Login</a></li>
+      <li><a href="#">Student Login</a></li>
+      <li><a href="#">Welcome Guest</a></li>
+    </ul>
+  </nav>
+
+  <!-- header -->
+
+  <div class="main-header">
+    <header class="head-block">
+
+      <img src="images/home/bpc_logo.png" alt="Birgunj Public College" width="204" height="154" class="bpc-logo" />
+      <h1>
+        <img src="images/home/college_name.png" alt="Bigunj Public College" width="559" height="34" />
+      </h1>
+
+      <nav id="" class="main-menu">
+        <ul class="dropdown">
+          <li><a href="#">The Institute</a></li>
+          <li><a href="#">Academic Programs &#x25Be</a>
+            <ul class="sub_menu">
+              <li><a href="#">Overview</a></li>
+              <li><a href="#">IME Associates</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Admission &#x25Be</a>
+            <ul class="sub_menu">
+              <li><a href="#">Introduction</a></li>
+              <li><a href="#">AMW</a></li>
+              <li><a href="#">IME SNM</a></li>
+              <li><a href="#">SAME Tractor</a></li>
+              <li><a href="#">Service Center</a></li>
+              <li><a href="#">Photo Gallery</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Students</a></li>
+          <li class="shift-right"><a href="#">Gallery &#x25Be</a>
+            <ul class="sub_menu">
+              <li><a href="#">Introduction</a></li>
+              <li><a href="#">Dealership Info</a></li>
+              <li><a href="#">Dealer Application Form</a></li>
+              <li><a href="#">Photo Gallery</a></li>
+              <li><a href="#">Dish Home</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Faculty &#x25Be</a>
+            <ul class="sub_menu">
+              <li><a href="#">Introduction</a></li>
+              <li><a href="#">Products and Models</a></li>
+              <li><a href="#">AMW Brochures</a></li>
+              <li><a href="#">Dealer Application Form</a></li>
+              <li><a href="#">Dealer Network</a></li>
+              <li><a href="#">Photo Gallery</a></li>
+              <li><a href="#">AMW India</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Career &#x25Be</a>
+            <ul class="sub_menu">
+              <li><a href="#">Introduction</a></li>
+              <li><a href="#">Dealership Info</a></li>
+              <li><a href="#">Dealer Application Form</a></li>
+              <li><a href="#">Photo Gallery</a></li>
+            </ul>
+          </li>
+          <li><a href="#">News &amp; Events</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
+
+  <!-- banner rotator -->
+
+  <section class="slider-block">
+    <div id="banner">
+      <div class="oneByOne_item">
+        <img src="images/home/banner_girls.png" >
+        <h1 class="slide1Txt1">Welcome to <span class="blue">Birgunj Public College</span></h1>
+        <p class="slide1Txt2">Birgunj Public College (BPC) a private sector run business management institution with the affiliation to Purbanchal University (PU), Tribhuvan University (TU) and Higher Secondary Education Board (HSEB), has made a progress in just ten years. The institution, initially begun with +2 Management, has been running <span class="blue">MBA</span>, <span class="green">BBA</span>, <span class="orange">MBS</span> and <span class="purple">BBS</span> at the consistent demand of the conscious guardians, enthusiastic students and intellectuals....
+        </p>
+        <a href="#" class="slide-button">Read More</a>
+      </div>
+      <div class="oneByOne_item">
+        <img src="images/home/banner_girls.png" >
+        <h1 class="slide1Txt1">Welcome to <span class="blue">Birgunj Public College</span></h1>
+        <p class="slide1Txt2">Birgunj Public College (BPC) a private sector run business management institution with the affiliation to Purbanchal University (PU), Tribhuvan University (TU) and Higher Secondary Education Board (HSEB), has made a progress in just ten years. The institution, initially begun with +2 Management, has been running <span class="blue">MBA</span>, <span class="green">BBA</span>, <span class="orange">MBS</span> and <span class="purple">BBS</span> at the consistent demand of the conscious guardians, enthusiastic students and intellectuals....
+        </p>
+        <a href="#" class="slide-button">Read More</a>
+      </div>
+      <div class="oneByOne_item">
+        <img src="images/home/banner_girls.png" >
+        <h1 class="slide1Txt1">Welcome to <span class="blue">Birgunj Public College</span></h1>
+        <p class="slide1Txt2">Birgunj Public College (BPC) a private sector run business management institution with the affiliation to Purbanchal University (PU), Tribhuvan University (TU) and Higher Secondary Education Board (HSEB), has made a progress in just ten years. The institution, initially begun with +2 Management, has been running <span class="blue">MBA</span>, <span class="green">BBA</span>, <span class="orange">MBS</span> and <span class="purple">BBS</span> at the consistent demand of the conscious guardians, enthusiastic students and intellectuals....
+        </p>
+        <a href="#" class="slide-button">Read More</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- three column grid -->
+
+  <section class="three-grid">
+    <section class="left-col blocks">
+      <img src="images/home/pink_girl.png" class="p-girl">
+
+      <article>
+        <h1>Student Perspectives</h1>
+        <h2>Student's Title / Name</h2>
+
+        <p>Being at BPC was once a thing of far
+          reach for me. Now, it has become a
+          reality! Within this short span of time, I
+          understood why BPC is different. It is
+          a storehouse of opportunities – a
+          perfect place to develop
+          oneself Now, it has become a
+          reality! Within this short span of time, I
+          understood why BPC is different. It is
+          a storehouse...</p>
+        </article>
+
+        <a href="#" class="red-btn">Read More..</a>
+      </section>
+
+      <section class="right-col blocks">
+        <h1>Events Calendar</h1>
+        <div class="cal-block">
+          <div class="date-block">
+            <span class="c-day">25</span><br>
+            <span class="c-month">Dec</span><br>
+            <span class="c-year">2012</span>
+          </div>
+          <div class="event-brief">
+            <h2> <a href="#">This is event description</a></h2>
+            <p>Being at BPC was once a thing of far
+              reach for me. Now, it has become a
+              reality! Within this short span of time, I
+              understood why BPC is different</p>
+            </div>
+            <div class="clear"></div>
+          </div>
+          <div class="cal-block">
+            <div class="date-block">
+              <span class="c-day">25</span><br>
+              <span class="c-month">Dec</span><br>
+              <span class="c-year">2012</span>
+            </div>
+
+            <div class="event-brief">
+              <h2><a href="#">This is event description</a></h2>
+              <p>Being at BPC was once a thing of far
+                reach for me. Now, it has become a
+                reality! Within this short span of time, I
+                understood why BPC is different</p>
+              </div>
+              <div class="clear"></div>
+            </div>
+
+            <a href="#" class="blue-btn">See Full Calendar Events..</a>
+          </section>
+
+          <section class="mid-col blocks">
+            <h1>News and Announcements</h1>
+
+            <div class="newsblock">
+              <h2><a href="#">Admission open for this this this</a></h2>
+              <span class="n-date">2013-01-13</span><br>
+              <p>Admission for 2013/2014 session has been started.
+                We are accepting the applications...</p>
+              </div>
+
+              <div class="newsblock">
+                <h2><a href="#">Admission open for this this this</a></h2>
+                <span class="n-date">2013-01-13</span><br>
+                <p>Admission for 2013/2014 session has been started.
+                  We are accepting the applications...</p>
+                </div>
+
+                <div class="newsblock">
+                  <h2><a href="#">Admission open for this this this</a></h2>
+                  <span class="n-date">2013-01-13</span><br>
+                  <p>Admission for 2013/2014 session has been started.
+                    We are accepting the applications...</p>
+                  </div>
+
+                  <a href="#" class="green-btn">Click to see full news here... </a>
+                </section>
+                <section class="clear"></section>
+              </section>
+
+              <!-- chairman pre footer block -->
+
+              <section class="pre-footer clearfix">
+
+                <section class="message-block">
+                  <h2>Message from the Founder Principal</h2>
+                  <div class="p-message">
+                    <img src="images/home/img1.png">
+                    <span class="p-name"><strong>Dr Deepak Shakya</strong></span>
+                    <span class="p-title">Founder Principal and Executive Director</span>
+                  </div>
+                  <p>
+
+                    Birgunj Public College (BPC) a private sector run business management institution with the affiliation to Purbanchal University (PU), Tribhuvan University (TU) and Higher Secondary Education Board (HSEB), has made a progress in just ten years. The institution, initially begun with +2 Management, has been running MBA, BBA, MBS and BBS at the consistent demand of the conscious guardians, enthusiastic students and intellectuals....
+
+                  </p>
+
+                  <p>Birgunj Public College (BPC) a private sector run business management institution with the affiliation to Purbanchal University (PU), Tribhuvan University (TU) and Higher Secondary Education Board (HSEB), has made a progress in just ten years. The institution, initially begun with +2 Management, has been running MBA, BBA, MBS and BBS at the consistent demand of the conscious guardians, enthusiastic students and intellectuals....</p>
+
+                  <p>I warmly welcome you all at BPC<br>
+                    <strong>Dr Deepak Shakya</strong>
+                  </p>
+                </section>
+
+                <section class="college-ad">
+                  <img src="images/home/bpc_img.png" class="bpc-ad-logo" width="383" height="129">
+
+                  <div id="std-pics">
+                    <img src="images/home/ad_students.png" width="451" height="298" id="picOne" />
+                    <img src="images/home/ad_students2.png" width="451" height="298" id="picTwo" />
+                  </div>
+
+                  <a href="#" class="admission-btn">
+                    <img src="images/home/admission_open.png" width="243" height="55">
+                  </a>
+
+                  <a href="#" class="awards">Scholarships and Awards</a>
+
+                  <div class="bbs-info">
+
+                    <span class="g-info">Get Info On</span>
+
+                    <a href="#" class="bbs">BBS</a> - <a href="#" class="mbs">MBS</a><br>
+                    <a href="#" class="bba">BBA</a> - <a href="#" class="mba">MBA</a>
+
+                  </div>
+
+                  <div class="f-connect">
+                    <span class="g-info">Get connected and follow us on</span>
+                    <br>
+                    <a href="#"><img src="images/home/fb-round-icon.png" alt="facebook" width="40" height="40"></a>
+                  </div>
+                </section>
+                <div class="clear"></div>
+              </section>
+
+              <!-- footer -->
+              <section class="bpc-footer-stretch">
+                <section class="bpc-footer clearfix">
+                  <div class="f-gridL">
+                    <ul class="l-list">
+                      <h2>The Institute</h2>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                    </ul>
+                    <ul class="l-list">
+                      <h2>Life at BPC</h2>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                    </ul>
+                  </div>
+
+                  <div class="f-gridR">
+                    <ul class="l-list">
+                      <h2>Academic Programs</h2>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                      <li><a href="#">The Institute</a></li>
+                    </ul>
+                    <div class="r-list">
+                      <h2>Contact Us</h2>
+                      <p>
+                        <strong class="blue">Birgunj Public College</strong><br>
+                        Panitanki, Birgunj - 10<br>
+                        Phone: <strong>+977-051-532198 / 051-526138</strong></br>
+                        Fax: <strong>+977-051-526138</strong><br>
+                        Email: <strong><a href="mailto: info@bpc.edu.np" class="blue-link">info@bpc.edu.np</a></strong></br>
+                        URL: <a href="#" class="blue-link" title="BPC Homepage">www.bpc.edu.np</a>
+                      </p>
+                    </div>
+                  </div>
+                  <div class="clear"></div>
+                </div>
+              </section>
+
+              <div class="l-foot">
+                <p>For general inquiries, administrative contact or admission, please call <span class="blue">+977-051-532198 / 051-526138</span> or visit the enquiry desk <br><br>
+                  Copyright &copy; 2013 Birgunj Public College. All rights reserved.
+                </p
+              </section>
+
+  <script src="/javascripts/jquery/jquery.1.8.2.min.js"></script>
+  <script src="/javascripts/jquery/jquery.dropdown.js" type="text/javascript"></script>
+  <script src="/javascripts/jquery/hoverIntent.js" type="text/javascript"></script>
+  <script type="text/javascript"  src="/javascripts/jquery/jquery.onebyone.min.js"></script>
+
+  <script type="text/javascript">
+
+  var currentTallest = 0,
+  currentRowStart = 0,
+  rowDivs = new Array(),
+  $el,
+  topPosition = 0;
+
+  $('.blocks').each(function() {
+
+   $el = $(this);
+   topPostion = $el.position().top;
+
+   if (currentRowStart != topPostion) {
+
+       // we just came to a new row.  Set all the heights on the completed row
+       for (currentDiv = 0 ; currentDiv < rowDivs.length ; currentDiv++) {
+         rowDivs[currentDiv].height(currentTallest);
+       }
+
+       // set the variables for the new row
+       rowDivs.length = 0; // empty the array
+       currentRowStart = topPostion;
+       currentTallest = $el.height();
+       rowDivs.push($el);
+
+     } else {
+
+       // another div on the current row.  Add it to the list and check if it's taller
+       rowDivs.push($el);
+       currentTallest = (currentTallest < $el.height()) ? ($el.height()) : (currentTallest);
+
+     }
+
+    // do the last row
+    for (currentDiv = 0 ; currentDiv < rowDivs.length ; currentDiv++) {
+     rowDivs[currentDiv].height(currentTallest);
+   }
+
+  });
+
+  </script>
+
+  <script type="text/javascript">
+    function switchImage(){
+      $('#std-pics img:visible').fadeOut(function(){
+        $(this).next().length ? $(this).next().fadeIn() : $('#std-pics img').eq(0).fadeIn();
+      });
+    };
+    $('#std-pics img').hide().eq(0).show(); // show only the first image
+    setInterval(switchImage, 5000);
+  </script>
+
+  <script type="text/javascript" charset="utf-8">
+  $(document).ready(function() {
+
+    $('#banner').oneByOne({
+      className: 'oneByOne1',
+          /* Please provide the width and height in the responsive
+          version, for the slider will keep the ratio when resize
+          depends on these size. */
+          width: 1140,
+          height: 409,
+          slideShow: false,
+          responsive: true,
+          minWidth: 480
+        });
+    });
+  </script>
+
+</body>
+</html>
