Add link for user login

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,8 +20,8 @@
   <!--top nav -->
   <nav id="" class="top-bar">
     <ul class="top-menu">
-      <li><a href="#">Faculty Login</a></li>
-      <li><a href="#">Student Login</a></li>
+      <li><a href="/user/login">Faculty Login</a></li>
+      <li><a href="/user/login">Student Login</a></li>
       <li><a href="#">Welcome Guest</a></li>
     </ul>
   </nav>
